--- a/CSS/home.css
+++ b/CSS/home.css
@@ -1,7 +1,50 @@
+@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Special+Gothic+Condensed+One&family=Titillium+Web:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700&display=swap');
+
 * {
     margin: 0;
     border: 0;
     text-decoration: none;
     list-style: none;
     color: black;
+}
+
+/* HEADER */
+
+header {
+    display: flex;
+}
+
+#navbar {
+    width: 100%;
+    padding: 20px;
+    display: flex;
+    justify-content: space-between;
+}
+
+#logo {
+    width: 5%
+}
+
+#pages_links {
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+    padding: 10px;
+}
+
+#pages_links li {
+    display: flex;
+    text-transform: uppercase;
+    padding: 20px;
+    width: 10%;
+    justify-content: center;
+}
+
+#pages_links li a {
+    width: 100%;
+    height: 100%;
+}
+
+#pages_links li a:hover {
+
 }
