--- a/CSS/home.css
+++ b/CSS/home.css
@@ -90,3 +90,46 @@ header {
 #arrowleft {
     left: 0;
 }
+
+/* ABOUT */
+
+#about {
+  display: flex;
+  width: 100%;
+  background-color: rgb(218, 218, 218);
+}
+
+#card_image_about {
+  width: 50%;
+  padding: 20px;
+}
+
+#image_about {
+  width: 25%;
+}
+
+#card_text_about {
+  
+}
+
+/* FOOTER */
+
+footer {
+  display: flex;
+  width: 100%;
+  background-color: rgb(2, 44, 2);
+  padding: 20px;
+  justify-content: space-around;
+  font-family: "Lato", sans-serif;
+}
+
+#info_footer {
+
+}
+
+.card_info {
+  display: flex;
+  padding: 10px;
+  align-items: center;
+  padding-right: 20px;
+}
